# simple-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW.md  README.md  TUTORIAL.md  pyproject.toml
examples/: demo.py
scripts/: verify_setup.py
src/simple_agent/: __init__.py  advanced.py  base.py  simple.py  tools.py
tests/: __init__.py  test_simple_agent.py  test_tools.py
